# AlphaQuarry

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_USER_MANUAL.md  README.md  SECURITY.md  factor_alalyze_lib.py  pyproject.toml  requirements.txt
alpha_mining/: __init__.py  adapters.py  ast_nodes.py  atomic_io.py  config.py  diagnostics.py  engine.py  field_catalog.py  hashing.py  panel_store.py  parquet_utils.py  parser.py  registry.py  schema.py  validators.py
configs/: closed_loop.example.yaml  closed_loop_deep.yaml  closed_loop_production.yaml  closed_loop_quick.yaml  datasource.example.yaml  index_universes.yaml  live.example.yaml  live.local.example.yaml
dashboard/: __init__.py
docs/: experiment_artifacts_schema.md  field_catalog.md  live_positions_template.csv  live_superalpha_runbook.md  maintenance.md  operator_registry_audit.md  quickstart.md  tushare_interface_fields.csv  tushare_points_reference.md
examples/: demo_eval_expression.py  demo_template_mining.py  demo_to_factor_research.py  input_format.md  run_demo.py  sample_factor_data.csv
factor_research/: __init__.py  combination.py  config.py  diagnostics.py  double_sort.py  ewma.py  metrics.py  plotting.py  preprocess.py  reporting.py  sample_splits.py  screening.py  single_factor.py  utils.py
scripts/: audit_analysis_artifacts.py  audit_wq_operator_coverage.py  bootstrap_tushare_lake.py  build_duckdb_catalog.py  check_live_readiness.py  check_live_superalpha_parity.py  check_operator_registry.py  check_panel_quality.py  compact_parquet_lake.py  compare_feedback_mutation_ab.py  inspect_closed_loop_health.py  materialize_input_snapshot.py  phase32_convergence_gate.py  preflight_guard.py  preflight_tushare.py  refresh_field_catalog.py  refresh_field_coverage.py  refresh_notebook.py  repo_ops_runner.py  reproduce_alpha.py  reproduce_alpha_oos.py  run_closed_loop.py  run_factor_dashboard.py  run_live_superalpha.py  update_tushare_lake.py
tests/: test_audit_analysis_artifacts.py  test_closed_loop_parameter_contract.py  test_dashboard_data_health_helpers.py  test_dashboard_frontend_copy.py  test_dashboard_live_api.py  test_dashboard_next_workbench_api.py  test_dashboard_workbench_api.py  test_delay_long_only_upgrade.py  test_factor_dashboard_api.py  test_maintenance_docs.py  test_minimal_pipeline.py  test_project_closeout_docs.py  test_superalpha_dashboard_api.py  test_text_encoding_guard.py
(+232 files in other folders)
