[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-quarry"
version = "0.1.0"
description = "Closed-loop alpha mining and factor research platform for China A-share market"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Alpha Quarry Contributors"},
]
keywords = ["quantitative", "alpha", "factor", "mining", "a-share", "china"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "scipy>=1.10",
    "PyYAML>=6.0",
    "bottleneck>=1.3",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "tushare>=1.4",
    "openpyxl>=3.1",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "fastapi>=0.136",
    "uvicorn>=0.46",
]

[project.urls]
Homepage = "https://github.com/pengfeijiang320-eng/AlphaQuarry"
Repository = "https://github.com/pengfeijiang320-eng/AlphaQuarry"
Issues = "https://github.com/pengfeijiang320-eng/AlphaQuarry/issues"
Documentation = "https://github.com/pengfeijiang320-eng/AlphaQuarry/tree/main/docs"
Changelog = "https://github.com/pengfeijiang320-eng/AlphaQuarry/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.28",
    "ruff>=0.11",
]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
include = ["alpha_mining*", "factor_research*", "dashboard*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",  # Module level import not at top of file (project convention for conditional imports)
    "F402",  # Import shadowed by loop variable (project uses 'field' as loop variable)
]

[tool.ruff.lint.isort]
known-first-party = ["alpha_mining", "factor_research", "dashboard"]

[tool.ruff.format]
quote-style = "double"
